# bekOviator

./: .gitignore  Dockerfile  README.md  entrypoint.sh  fly.toml  nginx.conf
backend/: CMakeLists.txt  Dockerfile  build.sh  build_backend.sh  build_json.sh  build_pistache.sh
backend/include/: bet.h  fixed_queue.h  game.h  json_utils.h  player.h  server.h
backend/src/: bet.cpp  game.cpp  json_utils.cpp  main.cpp  player.cpp  server.cpp
backend/tests/: CMakeLists.txt  test_bet.cpp  test_game.cpp  test_main.cpp  test_player.cpp
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: ActiveBets.js  AdminPanel.js  App.css  App.js  gameAPI.js  index.js
